[package]
name = "ckb-sdk-examples"
version = "0.1.0"
edition = "2021"

[lib]
name = "ckb_sdk_examples_env"
path = "env/env.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-sdk = "=2.5.0"
ckb-types = "=0.108.0"
ckb-jsonrpc-types = "=0.108.0"
dotenv = "0.15.0"
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }
